add translation and login page

--- a/school-management-be/package.json
+++ b/school-management-be/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
+    "start": "node src/server.js",
+    "dev": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +16,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^4.16.2",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "prisma": "^4.16.2"
