--- a/school-management-be/package.json
+++ b/school-management-be/package.json
@@ -20,7 +20,8 @@
     "express": "^5.2.1",
     "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "prisma": "^4.16.2"
