--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - JWT_EXPIRES_IN=7d
       - PORT=3000
       - NODE_ENV=production
-      - CORS_ORIGIN=http://localhost:4200
+      - CORS_ORIGIN=https://sunflowerskg.com
     ports:
       - "3000:3000"
     restart: unless-stopped
