--- a/school-management-be/.env.example
+++ b/school-management-be/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/school_management"
+DATABASE_URL="postgresql://postgres:schoolDB1@72.61.215.205:5432/school_management"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
