--- a/school-management-be/package.json
+++ b/school-management-be/package.json
@@ -8,6 +8,8 @@
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
     "seed:admin": "node scripts/seed-admin.js",
+    "seed:news": "node scripts/seed-news.js",
+    "migrate:news": "node scripts/run-migration.js",
     "start": "node src/server.js",
     "dev": "node src/server.js"
   },
