--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       - JWT_EXPIRES_IN=7d
       - PORT=3000
       - NODE_ENV=production
+      - CORS_ORIGIN=https://be.sunflowerskg.com
       - CORS_ORIGIN=https://sunflowerskg.com
+      - CORS_ORIGIN=localhost:4200
     ports:
       - "3000:3000"
     restart: unless-stopped
