--- a/school-management-be/package.json
+++ b/school-management-be/package.json
@@ -19,11 +19,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^4.16.2",
-    "express": "^5.2.1",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "prisma": "^4.16.2"
